--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,6 +3,8 @@ html {
 
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
 		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+
+	scrollbar-gutter: stable;
 }
 
 body {
@@ -13,6 +15,8 @@ body {
 
 	color: var(--fg);
 	background-color: var(--bg);
+
+	--scrollbar-width: 1ch;
 }
 
 p {
