--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,5 @@
 html {
-	font-size: 14px;
+	font-size: 16px;
 
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
 		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
@@ -15,6 +15,7 @@ body {
 
 	color: var(--fg);
 	background-color: var(--bg);
+	background-color: var(--bg1);
 
 	--scrollbar-width: 1ch;
 }
@@ -23,10 +24,7 @@ p {
 	line-height: 1.7;
 }
 
-h1,
-h2,
-h3,
-h4 {
+:where(h1, h2, h3, h4) {
 	color: var(--text-dim);
 }
 
@@ -34,10 +32,10 @@ h4 {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-input,
-select {
-	line-height: 1.2 !important;
-}
+/* input, */
+/* select { */
+/* 	line-height: 1.2 !important; */
+/* } */
 
 .container {
 	max-width: 100ch;
