--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,42 +1,21 @@
 html {
-	font-size: 16px;
-
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-
-	scrollbar-gutter: stable;
-}
-
-body {
-	position: relative;
-	text-rendering: optimizeSpeed;
-	line-height: 1.5;
-	line-height: 1;
-
 	color: var(--fg);
-	background-color: var(--bg);
 	background-color: var(--bg1);
+
+	line-height: 1;
 
 	--scrollbar-width: 1ch;
 	--border: 1px solid var(--bga1);
 }
 
-p {
-	line-height: 1.7;
-}
-
-:where(h1, h2, h3, h4) {
-	color: var(--text-dim);
-}
-
-.font2 {
-	font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-/* input, */
-/* select { */
-/* 	line-height: 1.2 !important; */
+/* :where(h1, h2, h3, h4) { */
+/* 	color: var(--text-dim); */
 /* } */
+
+.form .field :is(input, select, textarea) {
+	line-height: 1.2;
+	/* border-width: 3px; */
+}
 
 .container {
 	max-width: 100ch;
@@ -50,8 +29,10 @@ p {
 	margin-top: 3.5rem;
 }
 
-#modal {
-	--modal-bg: hsla(0, 0%, 0%, 0.5);
+@media (hover: hover) {
+	#modal {
+		backdrop-filter: blur(0.25rem);
+	}
 }
 
 /* html.dark { */
