--- a/src/css/app.css
+++ b/src/css/app.css
@@ -54,6 +54,10 @@ html {
 	line-height: 1.4;
 }
 
+#modal {
+	padding-block: 3rem;
+	padding-inline: clamp(1ch, 3vw, 2.5rem);
+}
 @media (hover: hover) {
 	#modal {
 		background: hsl(0, 0%, 0%, 0.3);
