--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,7 +7,10 @@ html {
 	--scrollbar-width: 1ch;
 	--border: 1px solid var(--bga1);
 }
-
+.f-mono {
+	font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas,
+		'DejaVu Sans Mono', monospace;
+}
 /* teko-700 - latin */
 @font-face {
 	font-display: swap;
